minor polish, spacing fixing & icon integration

--- a/styles/header.css
+++ b/styles/header.css
@@ -5,6 +5,7 @@ header{
 	display: flex;
 	flex-direction: row;
 	align-items: center;
+	width: 100%;
 }
 header > * {
 	width: 100%;
