--- a/styles/reset.css
+++ b/styles/reset.css
@@ -4,9 +4,27 @@
     text-align: center;
 	list-style: none;
 	box-sizing: border-box;
-	line-height: 1.7;
+	line-height: 28px;
+  	font-family: "Montserrat", sans-serif;
+
 }
 
 a{
 	text-decoration: none;
+}
+
+img{
+	display: block;
+}
+
+p{
+	font-size: 20px;
+}
+
+button{
+	border: none;
+}
+
+input{
+	border: none;
 }
