--- a/styles/theme.css
+++ b/styles/theme.css
@@ -20,6 +20,12 @@
 	color: var(--accent-color);
 }
 
+.white-theme :is(.large-icon, .medium-icon){
+	fill: #44DD8A;
+}
+
+
+
 .green-theme{
 	--accent-color : rgb(0,0,0,80%);
 	--background-color : #44dd8a;
@@ -31,10 +37,16 @@
 }
 
 
+:is(.green-theme, .blue-theme) :is(.large-icon, .medium-icon){
+	fill: #fff;
+}
+
+
+
 .green-theme.btn{
 	color:#152237;;
 }
 
 .gradient{
-	background: linear-gradient(to left,#44dd89aa,#2DCAB688,#15b6e2aa);
+	background: linear-gradient(to right,#44DD8A,#18A0FB);
 }
